; ModuleID = '/home/carl/AnghaBench/Cinder/src/oggvorbis/vorbis/extr_vorbisfile.c__add_serialno.c'
source_filename = "/home/carl/AnghaBench/Cinder/src/oggvorbis/vorbis/extr_vorbisfile.c__add_serialno.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64**, i32*)* @_add_serialno to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_add_serialno(i32* %0, i64** %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i64**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i64** %1, i64*** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i64 @ogg_page_serialno(i32* %8)
  store i64 %9, i64* %7, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = load i32, i32* %10, align 4
  %12 = add nsw i32 %11, 1
  store i32 %12, i32* %10, align 4
  %13 = load i64**, i64*** %5, align 8
  %14 = load i64*, i64** %13, align 8
  %15 = icmp ne i64* %14, null
  br i1 %15, label %16, label %26

16:                                               ; preds = %3
  %17 = load i64**, i64*** %5, align 8
  %18 = load i64*, i64** %17, align 8
  %19 = load i32*, i32** %6, align 8
  %20 = load i32, i32* %19, align 4
  %21 = sext i32 %20 to i64
  %22 = mul i64 8, %21
  %23 = trunc i64 %22 to i32
  %24 = call i64* @_ogg_realloc(i64* %18, i32 %23)
  %25 = load i64**, i64*** %5, align 8
  store i64* %24, i64** %25, align 8
  br label %29

26:                                               ; preds = %3
  %27 = call i64* @_ogg_malloc(i32 8)
  %28 = load i64**, i64*** %5, align 8
  store i64* %27, i64** %28, align 8
  br label %29

29:                                               ; preds = %26, %16
  %30 = load i64, i64* %7, align 8
  %31 = load i64**, i64*** %5, align 8
  %32 = load i64*, i64** %31, align 8
  %33 = load i32*, i32** %6, align 8
  %34 = load i32, i32* %33, align 4
  %35 = sub nsw i32 %34, 1
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds i64, i64* %32, i64 %36
  store i64 %30, i64* %37, align 8
  ret void
}

declare dso_local i64 @ogg_page_serialno(i32*) #1

declare dso_local i64* @_ogg_realloc(i64*, i32) #1

declare dso_local i64* @_ogg_malloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
